# iq_readout

./: .gitignore  .readthedocs.yaml  3-state_decay_pdfs.ipynb  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: actions.yaml
docs/source/: api.rst  classifier_docs.rst  conf.py  index.rst  intro.rst  iq_readout.plots.rst  iq_readout.rst  iq_readout.three_state_classifiers.rst  iq_readout.two_state_classifiers.rst  modules.rst
docs/source/_static/: options.css
docs/source/_templates/autosummary/: base.rst  class.rst  function.rst  method.rst
docs/source/classifiers/: decaylda.rst  gmlda.rst
docs/source/classifiers/three_state_classifiers/: data_three_state_calibration.npy  gmda.rst  index.rst
docs/source/classifiers/two_state_classifiers/: data_two_state_calibration.npy  decaylda.rst  gmlda.rst  index.rst  maxflda.rst
iq_readout/: __init__.py  classifiers.py  metrics.py  pdfs.py  plots.py  utils.py
iq_readout/plots/: __init__.py  metrics.py  plots_1d.py  plots_2d.py  shots1d.py  shots2d.py  summary.py
iq_readout/three_state_classifiers/: __init__.py  gmda.md  gmda.py  plots_1d.py  plots_2d.py  utils.py
iq_readout/two_state_classifiers/: __init__.py  decaylda.md  decaylda.py  decayqda.py  gmlda.md  gmlda.py  gmqda.py  maxflda.md  maxflda.py  plots_1d.py  plots_2d.py  utils.py
tests/: conftest.py  test_classifiers.py  test_docs.py  test_metrics.py  test_pdfs.py  test_tests.py  test_utils.py
tests/plots/: test_metrics.py  test_plots_1d.py  test_plots_2d.py  test_shots1d.py  test_shots2d.py  test_summary.py
tests/three_state_classifiers/: test_gmda.py  test_plots_1d_3state.py  test_plots_2d.py  test_plots_2d_2state.py  test_plots_2d_3state.py  test_utils_3state.py
tests/two_state_classifiers/: test_decaylda.py  test_gmlda.py  test_maxflda.py  test_plots_1d_2state.py  test_plots_2d_2state.py  test_utils_2state.py
