[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "iq_readout"
description = "Classifiers for IQ readout data from qubits" 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy>=1.26.4", # python >=3.12
    "scipy",
    "matplotlib",
    "pyyaml",
    "fonttools>=4.60.2", # security issue
]
keywords = ["IQ", "readout", "qubit", "classifiers", "lda"]

[tool.setuptools.packages.find]
include = ["iq_readout", "iq_readout.*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "scalene", "black", "sphinx", "sphinx-rtd-theme", "pytest-black"]

